# libgdamm

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  TODO  configure.ac  configure.in  libgdamm.doap
2/: NEWS  README  TODO
2/examples/introspection/: main.cc
2/libgda/libgdamm/: config.h  init.cc  value.h
2/libgda/src/: Makefile_list_of_hg.am_fragment  client.hg  columnindex.hg  command.hg  connection.ccg  connection.hg  connectionevent.hg  datamodel.hg  datamodelarray.ccg  datamodelindex.hg  datamodelquery.hg  datamodelrow.hg  datasourceinfo.ccg  dict.ccg  dict.hg  dictaggregate.hg  dictdatabase.ccg  dictdatabase.hg  entity.hg  entityfield.hg  handlernumerical.hg  handlerstring.hg  libgda_enums.defs  libgda_signals.defs  parameter.ccg  parameter.hg  providerinfo.hg  row.ccg  serveroperation.hg  serverprovider.hg
build_shared/: Makefile_build.am_fragment  Makefile_build_gensrc.am_fragment  Makefile_gensrc.am_fragment
docs/: Makefile.am
docs/reference/: Doxyfile.in  Makefile.am  libgdamm_header.html_fragment
examples/: Makefile.am  Makefile.am_fragment
examples/config/: main.cc
examples/introspection/: main.cc
examples/list_data_sources/: main.cc
examples/simple/: main.cc
examples/simple_iter/: main.cc
examples/sqlbuilder/: main.cc
libgda/: Makefile.am  README  libgdamm-2.0.pc.in  libgdamm-3.0.pc.in  libgdamm-4.0.pc.in  libgdamm-uninstalled.pc.in  libgdamm.h  libgdamm.pc.in  libgdammconfig.h.in
libgda/libgdamm/: .gitignore  Makefile.am  config.cc  config.h  filelist.am  init.cc  init.h  value.cc  value.h  value_tools.h  wrap_init.h
libgda/libgdamm/private/: Makefile.am
libgda/src/: Makefile.am  Makefile_list_of_hg.am_fragment  batch.ccg  batch.hg  blob.ccg  blob.hg  blobop.ccg  blobop.hg  client.ccg  client.hg  column.ccg  column.hg  columnindex.ccg  columnindex.hg  command.ccg  command.hg  config.ccg  config.hg  connection.ccg  connection.hg  connectionevent.ccg  connectionevent.hg  dataaccesswrapper.ccg  dataaccesswrapper.hg  datacomparator.ccg  datacomparator.hg  datahandler.ccg  datahandler.hg  datamodel.ccg  datamodel.hg  datamodelarray.ccg  datamodelarray.hg  datamodelbase.ccg  datamodelbase.hg  datamodelcolumnattributes.ccg  datamodelcolumnattributes.hg  datamodelfiltersql.hg  datamodelhash.hg  datamodelimport.ccg  datamodelimport.hg  (+129 more)
libgdamm/: ChangeLog
libgdamm-4-0/examples/: Makefile.am  Makefile.am_fragment
libgdamm-4-0/examples/simple/: main.cc
libgdamm-4-0/libgda/src/: Makefile_list_of_hg.am_fragment  batch.ccg  connection.hg  datamodel.ccg  datamodelquery.ccg  holder.hg  libgda_methods.defs  libgda_signals.defs  quarklist.ccg  quarklist.hg  set.hg  sqlparser.ccg  sqlparser.hg  threader.hg
libgdamm-4-0/tools/extra_defs_gen/: generate_defs_gda.cc
libgdamm/examples/simple/: main.cc
libgdamm/libgda/src/: column.ccg  datahandler.hg  datamodelquery.ccg  libgda_methods.defs  libgda_vfuncs.defs  object.hg  parameterlist.ccg  row.hg  transactionstatus.hg
tests/: Makefile.am  README  test_execute_command.cc  test_execute_nonselect_command.cc  test_get_schema.cc
tools/: Makefile.am
tools/extra_defs_gen/: Makefile.am  generate_defs_gda.cc
tools/gen_scripts/: libgda_generate_docs.sh  libgda_generate_enums.sh  libgda_generate_extra_defs.sh  libgda_generate_methods.sh
tools/m4/: Makefile.am  convert.m4  convert_libgdamm.m4  filelist.am
trunk/libgda/: libgdamm.h
trunk/tools/extra_defs_gen/: generate_defs_gda.cc
