SUBDIRS		= src libanjutamm

EXTRA_DIST	= README					\
		  libanjutammconfig.h.in libanjutamm.h	\
		  libanjutamm-1.0.pc.in

libanjutamm_includedir		= $(includedir)/libanjutamm-1.0
libanjutamm_include_HEADERS	= libanjutamm.h

libanjutamm_configdir		= $(libdir)/libanjutamm-1.0/include
libanjutamm_config_DATA	= libanjutammconfig.h

pkgconfigdir		= $(libdir)/pkgconfig
pkgconfig_DATA		= libanjutamm-1.0.pc

