include $(top_srcdir)/examples/Makefile.am_fragment

#Build the executable, but don't install it.
noinst_PROGRAMS = test_execute_command test_execute_nonselect_command test_get_schema

test_execute_command_SOURCES = test_execute_command.cc
test_execute_nonselect_command_SOURCES = test_execute_nonselect_command.cc
test_get_schema_SOURCES = test_get_schema.cc

EXTRA_DIST = README

