## Copyright (c) 2006
## The libanjutamm development team.

sublib_name	= libanjutamm
sublib_namespace = Anjuta
sublib_parentdir = libanjutamm
files_defs	= libanjuta.defs libanjuta_methods.defs libanjuta_signals.defs \
                  libanjuta_enums.defs libanjuta_others.defs libanjuta_vfuncs.defs 
		  libanjuta_docs.xml libanjuta_docs_override.xml

include $(top_srcdir)/build_shared/Makefile_gensrc.am_fragment

